# reinforcement-learning

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
breakout/: DQN.py  example.ipynb  train.py
breakout/results/: example.ipynb  metrics.csv
cart-pole/: DQN.ipynb  REINFORCE.ipynb
cart-pole/mlx/: REINFORCE.ipynb  REINFORCE.py
code/reinforcement-learning/: cart-pole.ipynb  theory.txt
enduro/: DQN.py  example.ipynb  train.py
enduro/results/: example.ipynb  metrics.csv
frozen-lake/: Q.ipynb
help/: debug.ipynb  preprocessing.ipynb
help/orion-hpc/: train.sh
help/visualisation/: gif.py  movie.py  plot.py  preprocessing.ipynb
reinforcement-learning/: agents.py  mlx-policy-based.ipynb  mlx-value-based.ipynb  policy-based-examples.ipynb  policy-cartpole.ipynb  torch-cartpole-policy.ipynb  torch-cartpole-value.ipynb  torch-policy-based.ipynb  torch-policy-cartpole.ipynb  torch-policy-tetris.ipynb  torch-value-based.ipynb  torch-value-cartpole.ipynb  torch-value-tetris.ipynb  value-based-examples.ipynb  value-cartpole.ipynb  value-tetris-video.ipynb  value-tetris-vision.ipynb  value-tetris.ipynb  work-in-progress-mlx.ipynb
reinforcement-learning/DeepQNetwork/: simple_deep_Q_network.py  simple_q_agent.py
reinforcement-learning/Q_Learning/: Frozen_Lake_Q.py
reinforcement-learning/_helpers/: gif.py  plotting.py
reinforcement-learning/agents/: mlx_policy.py  mlx_value.py  policy_simple.py  torch_policy_vision.py  torch_value.py  torch_value_vision.py  value_advanced.py  value_simple.py  value_video.py  (+1 more)
tetris/: DQN.py  example.ipynb  train.py
(+136 files in other folders)
